--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,28 @@
 aiofiles==24.1.0
-dash==2.17.1
-dash_bootstrap_components==1.6.0
-Flask_Caching==2.3.0
+cache==1.0.3
+celery==5.4.0
+colorlog==6.8.2
+cryptography==43.0.1
+dash-bootstrap-components==1.6.0
+dash-extensions==0.0.23
+dataclass-wizard==0.22.3
+flask-login==0.6.3
+flask-sqlalchemy==3.1.1
+git-filter-repo==2.38.0
+ipinfo==5.0.1
+jsbeautifier==1.15.1
+matplotlib==3.9.0
 orjson==3.10.6
 pandas==2.2.2
-plotly==5.22.0
+passlib==1.7.4
+pip-chill==1.0.3
+pipreqs==0.5.0
+pydantic==2.8.2
+pymysql==1.1.1
+python-dotenv==1.0.1
+ruff==0.4.10
+scikit-learn==1.5.1
+spyder-kernels==2.5.2
 tqdm==4.66.4
+tqdn==0.2.1
 watchdog==4.0.1
